<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cctv_layer_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zh@todo.todo">zh</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  
  <depend>cctv_layer_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
